[metadata]
name = nlp-models
version = 2.2.1
author= Ming Gao
author_email = ming_gao@outlook.com
url = https://github.com/minggnim/nlp-models
description = Transformers based NLP models
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires =
    >=3.6
install_requires =
    torch
    torchmetrics
    transformers
 
[options.packages.find]
where = src

[options.extras_require]
full =
    tqdm
