[metadata]
name = nlp-models
version = 2.3.2
author= Ming Gao
author_email = ming_gao@outlook.com
url = https://github.com/minggnim/nlp-models
description = Transformers based NLP models
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires =
    >=3.6
install_requires =
    torch
    torchmetrics
    transformers
 
[options.packages.find]
where = src

[options.extras_require]
full =
    tqdm
